	  unused variables by using EatChar rather than ch := GetChar ().
	* gm2/mc-boot/Gdecl.c:
	* gm2/mc-boot/Gkeyc.c:
	* gm2/mc/decl.def:
	* gm2/mc/decl.mod:  write out subrange type, detect type address
          when emitting casts.  Work out arrayref type when more than
	  one dimension is used.
	* gm2/mc/keyc.mod:  avoid C++ keywords operator and complex.

2016-12-14      Gaius Mulley <gaius@gnu.org>

	* gm2/Make-lang.in:  build cflex.c using the same rules as the
          m2flex.c.
	* gm2/c.flex:  include gm2-gcc/gcc-consolidation.h and use
          %option nounput to get a clean compilation with no warnings.
	  Declare linelen as unsigned int to avoid warnings.

2016-12-14      Gaius Mulley <gaius@gnu.org>

	* gm2/Make-lang.in:  changed flags when compiling cflex.c and
          M2Version.c
	* gm2/bnf/gm2l.bnf:  removed unused variable.  (SyntaxCheck)
          Removed unused variable.
	* gm2/gm2-compiler/M2DebugStack.mod:  (doNameLength) remove
          unused variable.  (doMaxInt) remove unused procedure function.
	* gm2/mc-boot/Gdecl.c:  rebuilt.
	* gm2/mc/decl.mod:  detect bitset in MAX/MIN and return ztype.
	  Add bitnumN to the list of completed types.

2016-12-12      Gaius Mulley <gaius@gnu.org>

	* gm2/Make-lang.in:  changed scaffold building rules
	  to use g++.
	* gm2/gm2-libs-ch/SysExceptions.c:  regenerated.
	* gm2/init/ppginit:  regenerated.
	* gm2/mc-boot-ch/Gmcrts.c:  regenerated.
	* gm2/mc-boot-ch/Gmcrts.h:  regenerated.
	* gm2/mc-boot/GASCII.h:  regenerated.
	* gm2/mc-boot/GArgs.h:  regenerated.
	* gm2/mc-boot/GAssertion.h:  regenerated.
	* gm2/mc-boot/GBreak.h:  regenerated.
	* gm2/mc-boot/GCOROUTINES.h:  regenerated.
	* gm2/mc-boot/GCmdArgs.h:  regenerated.
	* gm2/mc-boot/GDebug.h:  regenerated.
	* gm2/mc-boot/GDynamicStrings.c:  regenerated.
	* gm2/mc-boot/GDynamicStrings.h:  regenerated.
	* gm2/mc-boot/GEnvironment.h:  regenerated.
	* gm2/mc-boot/GFIO.c:  regenerated.
	* gm2/mc-boot/GFIO.h:  regenerated.